--- a/recruitxfront/src/index.css
+++ b/recruitxfront/src/index.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   margin: 0;
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -20,4 +20,26 @@ code {
 button {
   font-family: inherit;
   outline: none;
+}*/
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Oswald", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url('./Components/pinkTree.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    /*font-optical-sizing: auto;
+    font-weight: <20>;
+    font-style: normal;*/
 }
