--- a/recruitxfront/src/styles/JobsPage.css
+++ b/recruitxfront/src/styles/JobsPage.css
@@ -126,3 +126,49 @@ body {
     font-size: 15px;
     margin-top: 1rem;
 }
+
+.job-item {
+    padding: 1rem;
+    cursor: pointer;
+}
+
+    .job-item:hover {
+        background-color: #f0f0f0;
+    }
+
+    .job-item.selected {
+        background-color: #e0e0e0; 
+        font-weight: bold;
+    }
+
+.selected-job {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-family: Arial, sans-serif;
+}
+
+    .selected-job span {
+        font-size: 15px;
+        font-weight: bold;
+        color: #333;
+        text-transform: uppercase; 
+        position: absolute;
+        left: 1200px;
+    }
+
+.apply-btn {
+    padding: 0.4rem 0.8rem;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    position: absolute;
+    left: 1400px;
+}
+
+    .apply-btn:hover {
+        background-color: grey;
+    }
