--- a/recruitxfront/src/styles/InfoPage.css
+++ b/recruitxfront/src/styles/InfoPage.css
@@ -39,12 +39,12 @@
 
 .auth-buttons {
     display: flex;
-    gap: 0.2rem;
+    gap: 1rem;
 }
 
 
 .jobs-btn {
-    
+    padding: 0.7rem 1.5rem;
     background: linear-gradient(135deg, #8a2be2, #ff69b4);
     color: white;
     border: none;
@@ -135,11 +135,6 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.hero-section {
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
 }
 
 .image-placeholder {
