--- a/recruitxfront/src/styles/JobsPage.css
+++ b/recruitxfront/src/styles/JobsPage.css
@@ -39,12 +39,12 @@
 
 .auth-buttons {
     display: flex;
-    gap: 0.2rem;
+    gap: 1rem;
 }
 
 
 .jobs-btn {
-    
+    padding: 0.7rem 1.5rem;
     background: linear-gradient(135deg, #8a2be2, #ff69b4);
     color: white;
     border: none;
@@ -136,11 +136,6 @@ h1 {
     justify-content: center;
     align-items: center;
 }
-.hero-section {
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-}
 
 .image-placeholder {
     width: 400px;
@@ -192,3 +187,4 @@ h1 {
         display: none;
     }
 }
+
