--- a/recruitxfront/src/styles/AboutUsPage.css
+++ b/recruitxfront/src/styles/AboutUsPage.css
@@ -142,19 +142,21 @@ h1 {
 
 .image-container {
     width: 90%;
-    background-color: #f0f0f0;
-    border: 1px solid #ddd;
+    background-color: transparent;
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
 }
 
+
     .image-container img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         display: block;
+        margin-left: 110px;
     }
 
 .about-section {
@@ -163,7 +165,7 @@ h1 {
     border-radius: 12px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
     width: 90%;
-    margin: 0;
+    margin-left: 110px;
     text-align: left;
 }
 
